#73c noMorePosts for Messages. Fix to message-content bottom margin cutting off info message.

--- a/public/stylesheets/less/rp-message.less
+++ b/public/stylesheets/less/rp-message.less
@@ -5,7 +5,7 @@
 	-webkit-transform: translate3d(0px, 0px, 0px) !important;
 	margin-top: -50px !important;
 	padding-top: 76px !important;
-	
+	margin-bottom: 0px !important;
 }
 
 .rp-message-comment-body {
